kubernetes-eks/kubia.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
spec:
  containers:
  - image: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/kubia:v1
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
